test/libyul/yulSyntaxTests/objects/multiple_code.yul
object "A" {
  code { }
  code { }
}
// ----
// ParserError 8143: (26-30): Expected keyword "data" or "object" or "}".
